--- a/index.html
+++ b/index.html
@@ -112,10 +112,11 @@
 
   <script src="app.js"></script>
   <script>
+    // Register service worker
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js')
-        .then(reg => console.log('Service Worker registered:', reg.scope))
-        .catch(err => console.error('Service Worker registration failed:', err));
+      navigator.serviceWorker.register('service-worker.js')
+        .then(reg => console.log("Service Worker registered:", reg.scope))
+        .catch(err => console.error("SW registration failed:", err));
     }
   </script>
 </body>
