--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <script>
     // Register service worker
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
+      navigator.serviceWorker.register('sw.js')
         .then(reg => console.log("Service Worker registered:", reg.scope))
         .catch(err => console.error("SW registration failed:", err));
     }
