--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+  <div class="head">
   <div id="offlineStatus">
   <span id="statusIcon">🔴</span>
   <span id="statusText">Offline</span>
@@ -30,7 +31,7 @@
     <button onclick="generateDateWiseAttendanceReport()">Generate Monthly Report</button>
     <button onclick="generateDetailedYearlyAttendanceReport()">Generate Yearly Report</button>
   </div>
-  
+</div>
   <hr color="red" /></p></div>
 <div class="form-container">
   <label>Student Name</label>
